--- a/src/main/resources/assets/nightmare-mod/lang/en_us.json
+++ b/src/main/resources/assets/nightmare-mod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.nightmare-mod.magnetite": "Magnetite"
+  "item.nightmare-mod.magnetite": "Magnetite",
+  "item.nightmare-mod.raw_magnetite": "Raw /Magnetite"
 }
