--- a/src/main/resources/assets/nightmare-mod/lang/en_us.json
+++ b/src/main/resources/assets/nightmare-mod/lang/en_us.json
@@ -1,4 +1,10 @@
 {
   "item.nightmare-mod.magnetite": "Magnetite",
-  "item.nightmare-mod.raw_magnetite": "Raw /Magnetite"
+  "item.nightmare-mod.raw_magnetite": "Raw Magnetite",
+
+  "block.nightmare-mod.magnetite_block": "Block of Magnetite",
+  "block.nightmare-mod.raw_magnetite_block": "Block of Raw Magnetite",
+
+  "block.nightmare-mod.magnetite_ore": "Magnetite Ore"
+
 }
